<resources>
    <string name="app_name">Cinemateque</string>
    <string name="settings_button">Settings</string>
    <string name="preview_text">Preview Text</string>
    <string name="enter_name">Enter your name</string>
    <string name="todo">TODO</string>
    <string name="enter_interesting_film">Enter interesting film</string>
    <string name="hello_client">Hello, </string>
    <string name="back_button">Back</string>
    <string name="settings_title">Settings</string>
    <string name="apply_button">Apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="login">Login</string>
    <string name="enter_you_email">Enter you email</string>
    <string name="enter_you_password">Enter you password</string>
    <string name="name">Название</string>
</resources>